Fix horizontal scrolling on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,6 +22,7 @@ body {
   background-size: cover, 600px;
   background-blend-mode: overlay;
   -webkit-font-smoothing: antialiased;
+  overflow: hidden;
 }
 a {
   color: #fff;
